crates/xlate/tests/snapshots/golden_matrix__output_json_object__gpt-4o-mini__20260910__responses_to_chat__gpt5_chat.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Return JSON: an object with a city field set to Paris."
    }
  ],
  "response_format": {
    "type": "json_object"
  },
  "max_completion_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
