crates/xlate/tests/snapshots/golden_matrix__output_json_object__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
ERROR kind=unsupported status=400 param=response_format
message: the backend does not support structured (json_object) output
